# demo-cam

./: .gitignore  README.md
benchmarks/: cpu_ultrafast.txt  cpu_veryfast.txt  phaseA_416_60s.md  phaseA_640_60s.md  results.csv  results.md
docker/: Dockerfile  Dockerfile.ros2  compose.ros2.yaml  compose.yaml
hostmachine/: h264.sdp
ros2_ws/src/demo_cam_detect/: package.xml  setup.cfg  setup.py
ros2_ws/src/demo_cam_detect/demo_cam_detect/: detector_node.py  detector_node.py.bak.20260303_115056  metrics.py  mjpeg_bridge_node.py  yolov8_onnx.py
ros2_ws/src/demo_cam_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/demo_cam_ros/config/: apriltag.yaml  usb_cam.yaml
ros2_ws/src/demo_cam_ros/demo_cam_ros/: qos_relay.py
ros2_ws/src/demo_cam_ros/launch/: usb_cam_apriltag.launch.py
scripts/: benchmark_presets.sh  camera_probe.sh  healthcheck.sh  install_gstreamer.sh  phaseB_healthcheck.sh  phaseB_start.sh  phaseB_stop.sh  stream_and_record_h264.sh
